--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,113 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Generate Math Questions</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>Generate Math Questions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
-
-    <!-- Icons -->
-    <link rel="icon" href="assets/logo.svg">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css" />
+  <!-- Favicon -->
+  <link rel="icon" href="assets/logo.svg" />
 </head>
 <body>
-    <!-- Sidebar -->
-    <div id="sidebar" class="sidebar">
-        <img src="assets/logo.svg" alt="Logo" class="logo-icon" onclick="toggleSidebar()" />
-        <div id="sidebar-expanded">
-            <button onclick="newChat()" class="btn btn-dark w-100 mb-2"><i class="bi bi-plus-circle"></i> New Chat</button>
-            <button onclick="goToHistory()" class="btn btn-dark w-100"><i class="bi bi-clock-history"></i> History</button>
-            <button onclick="toggleSidebar()" class="btn btn-secondary mt-2 w-100">Close</button>
-        </div>
+
+  <!-- Left Sidebar -->
+  <aside id="sidebar" class="sidebar expanded">
+    <!-- Logo (shows text fallback if svg missing) -->
+    <img src="assets/logo.svg" alt="Logo" class="logo-icon"
+         onclick="toggleSidebar()"
+         onerror="this.style.display='none'; document.getElementById('logoText').style.display='block';" />
+    <div id="logoText" style="display:none; color:#fff; cursor:pointer; margin-bottom:20px;" onclick="toggleSidebar()">☰</div>
+
+    <div id="sidebar-expanded">
+      <button onclick="newChat()" class="btn btn-dark w-100 mb-2">
+        <i class="bi bi-plus-circle"></i> New Chat
+      </button>
+      <button onclick="goToHistory()" class="btn btn-dark w-100">
+        <i class="bi bi-clock-history"></i> History
+      </button>
+      <button onclick="toggleSidebar()" class="btn btn-secondary mt-2 w-100">Close</button>
     </div>
+  </aside>
 
-    <!-- Top Right Dropdown Menu -->
+  <!-- Top-right dropdown -->
+  <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color:transparent; box-shadow:none;">
+    <div class="container-fluid justify-content-end">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">☰</button>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+          <li><a class="dropdown-item" href="login.html">Login</a></li>
+          <li><a class="dropdown-item" href="signup.html">Sign Up</a></li>
+          <li><a class="dropdown-item" href="about.html">About</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color: transparent; box-shadow: none;">
-        <div class="container-fluid justify-content-end">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                    ☰
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="login.html">Login</a></li>
-                    <li><a class="dropdown-item" href="signup.html">Sign Up</a></li>
-                    <li><a class="dropdown-item" href="about.html">About</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    <!-- Main Content -->
+  <!-- Main Content -->
+  <main class="main-wrap">
     <div class="container text-center mt-5">
-        <h1>Generate Math Questions</h1>
+      <h1>Generate Math Questions</h1>
 
-        <div class="input-group mt-4 mb-3">
-            <input type="text" class="form-control" placeholder="Enter a prompt..." id="promptInput">
-            <button class="btn btn-primary" onclick="submitPrompt()">
-                <i class="bi bi-arrow-right"></i>
-            </button>
-        </div>
+      <!-- Prompt -->
+      <div class="input-group mt-4 mb-3">
+        <input type="text" class="form-control" placeholder="Enter a prompt..." id="promptInput" />
+        <button class="btn btn-primary" onclick="submitPrompt()" aria-label="Generate">
+          <i class="bi bi-arrow-right"></i>
+        </button>
+      </div>
 
-        <!-- Dropdown Filters -->
-        <div class="row mb-4">
-            <div class="col-md-3">
-                <label>Country</label>
-                <select id="country" class="form-select">
-                    <option value="">-- Select Country --</option>
-                    <option>Sri Lanka</option>
-                    <option>India</option>
-                    <option>Albania</option>
-                </select>
-            </div>
-            <div class="col-md-3">
-                <label>Language</label>
-                <select id="language" class="form-select">
-                    <option>English</option>
-                    <option>Sinhala</option>
-                    <option>Tamil</option>
-                    <option>Hindi</option>
-                    <option>Albanian</option>
-                </select>
-            </div>
-            <div class="col-md-3">
-                <label>Grade</label>
-                <select id="grade" class="form-select">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    <option>6</option>
-                </select>
-            </div>
-            <div class="col-md-3">
-                <label>Model</label>
-                <select id="model" class="form-select">
-                    <option>Qwen</option>
-                    <option>Gemini</option>
-                    <option>Chat GPT</option>
-                </select>
-            </div>
+      <!-- Filters -->
+      <div class="row mb-4">
+        <div class="col-md-3">
+          <label>Country</label>
+          <select id="country" class="form-select">
+            <option value="">-- Select Country --</option>
+            <option>Sri Lanka</option>
+            <option>India</option>
+            <option>Albania</option>
+          </select>
         </div>
+        <div class="col-md-3">
+          <label>Language</label>
+          <select id="language" class="form-select">
+            <option>English</option>
+            <option>Sinhala</option>
+            <option>Tamil</option>
+            <option>Hindi</option>
+            <option>Albanian</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <label>Grade</label>
+          <select id="grade" class="form-select">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <label>Model</label>
+          <select id="model" class="form-select">
+            <option>Qwen</option>
+            <option>Gemini</option>
+            <option>Chat GPT</option>
+          </select>
+        </div>
+      </div>
 
-        <!-- Answer Output Box -->
-        <div id="outputBox" class="border p-4 bg-light rounded shadow-sm text-start">
-            <p id="responseText">Your generated question will appear here...</p>
-        </div>
+      <!-- Output -->
+      <div id="outputBox" class="border p-4 bg-light rounded shadow-sm text-start">
+        <p id="responseText">Your generated question will appear here...</p>
+      </div>
     </div>
+  </main>
 
-    <!-- JS Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/sidebar.js"></script>
+  <!-- JS -->
+  <script>
+    function toggleSidebar() {
+      const sidebar = document.getElementById("sidebar");
+      const expanded = document.getElementById("sidebar-expanded");
+      sidebar.classList.toggle("expanded");
+      expanded.classList.toggle("d-none");
+
+      const main = document.querySelector(".main-wrap");
+      if (sidebar.classList.contains("expanded")) {
+        main.style.marginLeft = "220px";
+      } else {
+        main.style.marginLeft = "80px";
+      }
+    }
+
+    function newChat() {
+      // Simple: reload the page to start a fresh session
+      window.location.href = "index.html";
+    }
+
+    function goToHistory() {
+      window.location.href = "history.html";
+    }
+
+    // Ensure expanded on first load
+    window.addEventListener("DOMContentLoaded", () => {
+      const sidebar = document.getElementById("sidebar");
+      const main = document.querySelector(".main-wrap");
+      sidebar.classList.add("expanded");
+      document.getElementById("sidebar-expanded").classList.remove("d-none");
+      main.style.marginLeft = "220px";
+    });
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
