--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,16 +18,12 @@
 
   <!-- Left Sidebar -->
   <aside id="sidebar" class="sidebar expanded">
-    <!-- Logo (shows text fallback if svg missing) -->
     <img src="assets/logo.svg" alt="Logo" class="logo-icon"
          onclick="toggleSidebar()"
          onerror="this.style.display='none'; document.getElementById('logoText').style.display='block';" />
     <div id="logoText" style="display:none; color:#fff; cursor:pointer; margin-bottom:20px;" onclick="toggleSidebar()">☰</div>
 
     <div id="sidebar-expanded">
-      <button onclick="newChat()" class="btn btn-dark w-100 mb-2">
-        <i class="bi bi-plus-circle"></i> New Chat
-      </button>
       <button onclick="goToHistory()" class="btn btn-dark w-100">
         <i class="bi bi-clock-history"></i> History
       </button>
@@ -35,17 +31,11 @@
     </div>
   </aside>
 
-  <!-- Top-right dropdown -->
+  <!-- Top-right actions -->
   <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color:transparent; box-shadow:none;">
-    <div class="container-fluid justify-content-end">
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">☰</button>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
-          <li><a class="dropdown-item" href="login.html">Login</a></li>
-          <li><a class="dropdown-item" href="signup.html">Sign Up</a></li>
-          <li><a class="dropdown-item" href="about.html">About</a></li>
-        </ul>
-      </div>
+    <div class="container-fluid justify-content-end gap-2 pe-4">
+      <a href="login.html" class="btn btn-success"><i class="bi bi-box-arrow-in-right me-1"></i>Login</a>
+      <a href="signup.html" class="btn btn-outline-light"><i class="bi bi-person-plus me-1"></i>Sign Up</a>
     </div>
   </nav>
 
@@ -54,27 +44,20 @@
     <div class="container text-center mt-5">
       <h1>Generate Math Questions</h1>
 
-      <!-- Prompt -->
-      <div class="input-group mt-4 mb-3">
-        <input type="text" class="form-control" placeholder="Enter a prompt..." id="promptInput" />
-        <button class="btn btn-primary" onclick="submitPrompt()" aria-label="Generate">
-          <i class="bi bi-arrow-right"></i>
-        </button>
-      </div>
-
-      <!-- Filters -->
-      <div class="row mb-4">
+      <!-- Filters only (no free-text prompt) -->
+      <div class="row g-3 mb-3 text-start mt-3">
         <div class="col-md-3">
-          <label>Country</label>
+          <label class="form-label">Country</label>
           <select id="country" class="form-select">
             <option value="">-- Select Country --</option>
-            <option>Sri Lanka</option>
-            <option>India</option>
-            <option>Albania</option>
+            <option value="Sri Lanka">Sri Lanka</option>
+            <option value="India">India</option>
+            <option value="Albania">Albania</option>
           </select>
         </div>
+
         <div class="col-md-3">
-          <label>Language</label>
+          <label class="form-label">Language</label>
           <select id="language" class="form-select">
             <option>English</option>
             <option>Sinhala</option>
@@ -83,25 +66,41 @@
             <option>Albanian</option>
           </select>
         </div>
+
         <div class="col-md-3">
-          <label>Grade</label>
+          <label class="form-label">Grade</label>
           <select id="grade" class="form-select">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
+            <option>1</option><option>2</option><option>3</option>
+            <option>4</option><option>5</option><option>6</option>
           </select>
         </div>
+
         <div class="col-md-3">
-          <label>Model</label>
+          <label class="form-label">Model</label>
           <select id="model" class="form-select">
             <option>Qwen</option>
             <option>Gemini</option>
             <option>Chat GPT</option>
           </select>
         </div>
+
+        <div class="col-md-3">
+          <label class="form-label">Topic</label>
+          <select id="topic" class="form-select">
+            <option value="addition">Addition</option>
+            <option value="subtraction">Subtraction</option>
+            <option value="multiplication">Multiplication</option>
+            <option value="division">Division</option>
+            <option value="fractions">Fractions</option>
+          </select>
+        </div>
+      </div>
+
+      <!-- Generate button -->
+      <div class="text-end mb-3">
+        <button id="generateBtn" class="btn btn-primary" onclick="submitPrompt()">
+          <i class="bi bi-magic"></i> Generate
+        </button>
       </div>
 
       <!-- Output -->
@@ -111,7 +110,7 @@
     </div>
   </main>
 
-  <!-- JS -->
+  <!-- Page helpers -->
   <script>
     function toggleSidebar() {
       const sidebar = document.getElementById("sidebar");
@@ -120,23 +119,10 @@
       expanded.classList.toggle("d-none");
 
       const main = document.querySelector(".main-wrap");
-      if (sidebar.classList.contains("expanded")) {
-        main.style.marginLeft = "220px";
-      } else {
-        main.style.marginLeft = "80px";
-      }
+      main.style.marginLeft = sidebar.classList.contains("expanded") ? "220px" : "80px";
     }
+    function goToHistory() { window.location.href = "history.html"; }
 
-    function newChat() {
-      // Simple: reload the page to start a fresh session
-      window.location.href = "index.html";
-    }
-
-    function goToHistory() {
-      window.location.href = "history.html";
-    }
-
-    // Ensure expanded on first load
     window.addEventListener("DOMContentLoaded", () => {
       const sidebar = document.getElementById("sidebar");
       const main = document.querySelector(".main-wrap");
@@ -146,6 +132,8 @@
     });
   </script>
 
+  <!-- App logic: auto-builds a prompt from filters -->
+  <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
