--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,9 +24,15 @@
     <div id="logoText" style="display:none; color:#fff; cursor:pointer; margin-bottom:20px;" onclick="toggleSidebar()">☰</div>
 
     <div id="sidebar-expanded">
-      <button onclick="goToHistory()" class="btn btn-dark w-100">
+      <button onclick="goToHistory()" class="btn btn-dark w-100 mb-2">
         <i class="bi bi-clock-history"></i> History
       </button>
+
+      <!-- NEW: About in the sidebar -->
+      <a href="about.html" class="btn btn-dark w-100 mb-2">
+        <i class="bi bi-info-circle"></i> About
+      </a>
+
       <button onclick="toggleSidebar()" class="btn btn-secondary mt-2 w-100">Close</button>
     </div>
   </aside>
@@ -34,8 +40,16 @@
   <!-- Top-right actions -->
   <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color:transparent; box-shadow:none;">
     <div class="container-fluid justify-content-end gap-2 pe-4">
-      <a href="login.html" class="btn btn-success"><i class="bi bi-box-arrow-in-right me-1"></i>Login</a>
-      <a href="signup.html" class="btn btn-outline-light"><i class="bi bi-person-plus me-1"></i>Sign Up</a>
+      <a href="login.html" class="btn btn-success">
+        <i class="bi bi-box-arrow-in-right me-1"></i>Login
+      </a>
+      <a href="signup.html" class="btn btn-outline-light">
+        <i class="bi bi-person-plus me-1"></i>Sign Up
+      </a>
+      <!-- NEW: About in the top-right -->
+      <a href="about.html" class="btn btn-info">
+        <i class="bi bi-info-circle me-1"></i>About
+      </a>
     </div>
   </nav>
 
@@ -132,7 +146,7 @@
     });
   </script>
 
-  <!-- App logic: auto-builds a prompt from filters -->
+  <!-- App logic -->
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
