--- a/frontend/index.html
+++ b/frontend/index.html
@@ -147,6 +147,8 @@
   </script>
 
   <!-- App logic -->
+  <script src="js/config.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
