--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -68,6 +68,7 @@
   <!-- Bootstrap + App JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/config.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/signup.js"></script>
 </body>
 </html>
