--- a/frontend/history.html
+++ b/frontend/history.html
@@ -3,67 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <title>Chat History</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Page CSS -->
+  <link rel="stylesheet" href="css/history.css" />
 </head>
-<body class="bg-dark text-light">
+<body class="history-body">
 
-  <div class="container mt-5">
-    <h1 class="mb-4 text-center">Chat History</h1>
-
-    <!-- History list -->
-    <ul id="historyList" class="list-group mb-4">
-      <!-- Example entry -->
-      <!-- <li class="list-group-item">Generated Question 1</li> -->
-    </ul>
-
-    <!-- Buttons -->
-    <div class="d-flex justify-content-between">
-      <a href="index.html" class="btn btn-secondary">
-        <i class="bi bi-arrow-left"></i> Back
-      </a>
-      <button id="clearHistoryBtn" class="btn btn-danger">
-        <i class="bi bi-trash"></i> Clear History
-      </button>
+  <nav class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container">
+      <a href="index.html" class="navbar-brand fw-semibold">Math App</a>
+      <div class="d-flex gap-2">
+        <a href="index.html" class="btn btn-outline-light btn-sm"><i class="bi bi-house-door me-1"></i>Home</a>
+        <a href="login.html" class="btn btn-outline-light btn-sm">Login</a>
+      </div>
     </div>
-  </div>
+  </nav>
 
-  <script>
-    // Load history from localStorage
-    function loadHistory() {
-      const historyList = document.getElementById("historyList");
-      const history = JSON.parse(localStorage.getItem("chatHistory")) || [];
+  <main class="container py-4">
+    <!-- Header row -->
+    <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3">
+      <div>
+        <h1 class="page-title mb-0">Chat History</h1>
+        <small class="text-secondary">View, reopen, or clear your previous generations.</small>
+      </div>
 
-      historyList.innerHTML = "";
-      if (history.length === 0) {
-        historyList.innerHTML = `<li class="list-group-item text-muted">No history found</li>`;
-        return;
-      }
+      <div class="d-flex gap-2">
+        <a href="index.html" class="btn btn-outline-secondary">
+          <i class="bi bi-arrow-left"></i> Back
+        </a>
+        <button id="clearAllBtn" class="btn btn-danger">
+          <i class="bi bi-trash3"></i> Clear History
+        </button>
+      </div>
+    </div>
 
-      history.forEach((item, index) => {
-        const li = document.createElement("li");
-        li.className = "list-group-item";
-        li.textContent = `${index + 1}. ${item}`;
-        historyList.appendChild(li);
-      });
-    }
+    <!-- Logged-out alert (hidden by default) -->
+    <div id="loginAlert" class="alert alert-warning d-none" role="alert">
+      <div class="d-flex align-items-center">
+        <i class="bi bi-exclamation-triangle-fill me-2 fs-5"></i>
+        <div class="flex-grow-1">
+          <strong>You must log in first.</strong> Your chat history is linked to your account.
+        </div>
+        <a href="login.html" class="btn btn-sm btn-primary ms-3">
+          <i class="bi bi-box-arrow-in-right me-1"></i>Login
+        </a>
+      </div>
+    </div>
 
-    // Clear history
-    document.getElementById("clearHistoryBtn").addEventListener("click", () => {
-      localStorage.removeItem("chatHistory");
-      loadHistory();
-    });
+    <!-- Card -->
+    <div class="card shadow-sm border-0">
+      <div class="card-body p-0">
+        <!-- Empty state -->
+        <div id="emptyState" class="empty-state d-none text-center p-5">
+          <div class="empty-illustration mx-auto mb-3">
+            <i class="bi bi-chat-square-text"></i>
+          </div>
+          <h5 class="mb-1">No history yet</h5>
+          <p class="text-secondary mb-3">Your generated questions will appear here. Start a new session to see history.</p>
+          <a href="index.html" class="btn btn-primary">
+            <i class="bi bi-magic me-1"></i>Start Generating
+          </a>
+        </div>
 
-    // Run when page loads
-    loadHistory();
-  </script>
+        <!-- List -->
+        <ul id="historyList" class="list-group list-group-flush"></ul>
+      </div>
+    </div>
 
+    <footer class="text-center text-secondary small mt-4">
+      History is stored per user. Clearing removes items permanently.
+    </footer>
+  </main>
+
+  <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/history.js"></script>
 </body>
