--- a/frontend/history.html
+++ b/frontend/history.html
@@ -11,20 +11,45 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Page CSS -->
   <link rel="stylesheet" href="css/history.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body class="history-body">
 
-  <nav class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container">
-      <a href="index.html" class="navbar-brand fw-semibold">Math App</a>
-      <div class="d-flex gap-2">
-        <a href="index.html" class="btn btn-outline-light btn-sm"><i class="bi bi-house-door me-1"></i>Home</a>
-        <a href="login.html" class="btn btn-outline-light btn-sm">Login</a>
-      </div>
-    </div>
-  </nav>
+  <!-- Left Sidebar -->
+<aside id="sidebar" class="sidebar">
+  <!-- Logo -->
+  <img src="logo/mathapp_logo.png" alt="Logo" class="logo-main"
+       onclick="toggleSidebar()"
+       onerror="this.style.display='none'; document.getElementById('logoText').style.display='block';" />
+  <div id="logoText" style="display:none; color:#fff; cursor:pointer; margin-bottom:20px;" onclick="toggleSidebar()">☰</div>
 
-  <main class="container py-4">
+  <hr class="sidebar-divider">
+
+  <!-- Sidebar Menu -->
+  <div class="sidebar-menu">
+    <a href="index.html" class="btn">
+      <img src="logo/newchat_logo.png" class="sidebar-icon" />
+      <span class="label">New Chat</span>
+    </a>
+    <a href="history.html" class="btn">
+      <img src="logo/history_logo.png" class="sidebar-icon" />
+      <span class="label">History</span>
+    </a>
+    <a href="about.html" class="btn">
+      <img src="logo/about_logo.png" class="sidebar-icon" />
+      <span class="label">About</span>
+    </a>
+    <a href="login.html" class="btn no-icon">
+      <span class="label">Login</span>
+    </a>
+    <a href="signup.html" class="btn no-icon">
+      <span class="label">Sign Up</span>
+    </a>
+  </div>
+</aside>
+
+  <main class="main-wrap">
+    <div class="container py-4">
     <!-- Header row -->
     <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3">
       <div>
@@ -83,5 +108,6 @@
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/history.js"></script>
+  <script src="js/sidebar.js"></script>
 </body>
 </html>
