--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Login - Math App</title>
-    <link rel="stylesheet" href="../css/styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/login.css" />
 </head>
-<body class="bg-dark text-light d-flex justify-content-center align-items-center vh-100">
+
+<body class="d-flex justify-content-center align-items-center vh-100">
 
     <div class="card p-4" style="min-width: 400px;">
         <h2 class="text-center mb-4">Login</h2>
