--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/signup.css" />
   <link rel="icon" href="assets/logo.svg" />
 </head>
-<body class="bg-dark text-light">
+<body>
   <div class="container d-flex align-items-center justify-content-center min-vh-100">
     <div class="card shadow-lg" style="max-width: 420px; width: 100%;">
       <div class="card-body p-4">
