--- a/frontend/history.html
+++ b/frontend/history.html
@@ -109,5 +109,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/history.js"></script>
   <script src="js/sidebar.js"></script>
+  <script src="js/auth.js"></script>
+  <script>
+    requireAuth();
+  </script>
+
 </body>
 </html>
