--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,17 +49,15 @@
   </div>
 </aside>
 
-  <!-- Top-right actions -->
+  <!-- Top-right profile -->
   <nav class="navbar navbar-expand-lg navbar-dark justify-content-end" style="background-color:transparent; box-shadow:none;">
     <div class="container-fluid justify-content-end gap-2 pe-4">
-      <a href="login.html" class="btn btn-success">
-        <i class="bi bi-box-arrow-in-right me-1"></i>Login
-      </a>
-      <a href="signup.html" class="btn btn-outline-light">
-        <i class="bi bi-person-plus me-1"></i>Sign Up
-      </a>
+      <button id="profileBtn" class="btn p-0 border-0 bg-transparent d-none">
+        <img src="logo/pp.png" alt="Profile" class="rounded-circle" style="width:24px; height:24px;">
+      </button>
     </div>
   </nav>
+
 
   <!-- Main Content -->
   <main class="main-wrap">
@@ -140,5 +138,23 @@
   <script src="js/sidebar.js"></script>
   <script src="js/history.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/auth.js"></script>
+  <script>
+  //requireAuth();
+  </script>
+
+  <!-- Profile Modal -->
+<div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="background:#0d2c3a; color:#fff; border:1px solid #00d9ff;">
+      <div class="modal-body text-center">
+        <img src="logo/pp512.png" alt="Profile" class="rounded-circle mb-3" style="width:120px; height:120px; border:3px solid rgba(0,217,255,0.6); box-shadow:0 0 10px rgba(0,217,255,0.35);">
+        <p id="profileName">Your Profile</p>
+        <button id="logoutBtn" class="btn btn-danger w-100">Logout</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
