--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,24 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+
   <!-- Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
+  <!-- KaTeX (for rendering math expressions like $V = \pi r^2 h$) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
+    onload="renderMathInElement(document.body, {
+      delimiters: [
+        {left: '$', right: '$', display: false},
+        {left: '$$', right: '$$', display: true}
+      ]
+    });"></script>
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css" />
+
   <!-- Favicon -->
   <link rel="icon" href="logo/mathapp_logo.png" />
 </head>
