--- a/frontend/history.html
+++ b/frontend/history.html
@@ -111,5 +111,24 @@
   <script src="js/sidebar.js"></script>
   <script src="js/auth.js"></script>
 
+    <!-- Delete Confirmation Modal -->
+  <div class="modal fade" id="confirmModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content" style="background-color:#0f3542; color:#fff; border-radius:12px;">
+        <div class="modal-header border-0">
+          <h5 class="modal-title" id="confirmModalTitle">Confirm Action</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="confirmModalBody">
+          Are you sure you want to proceed?
+        </div>
+        <div class="modal-footer border-0 justify-content-center">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-danger" id="confirmModalYesBtn">Yes, Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
