--- a/frontend/history.html
+++ b/frontend/history.html
@@ -54,7 +54,7 @@
     <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3">
       <div>
         <h1 class="page-title mb-0">Chat History</h1>
-        <small class="text-secondary">View, reopen, or clear your previous generations.</small>
+        <small class="text-secondary">View or clear your previous generations.</small>
       </div>
 
       <div class="d-flex gap-2">
