--- a/frontend/index.html
+++ b/frontend/index.html
@@ -170,5 +170,22 @@
   </div>
 </div>
 
+<!-- Alert Modal (replaces browser alert) -->
+<div class="modal fade" id="alertModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content" style="background-color:#0f3542; color:#fff; border-radius:12px;">
+      <div class="modal-header border-0">
+        <h5 class="modal-title" id="alertModalTitle">Notice</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="alertModalBody">
+        Something went wrong.
+      </div>
+      <div class="modal-footer border-0 justify-content-center">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
