fix: add dynamic Qwen language warning note

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,8 +87,10 @@
 
         <div class="col-md-3">
           <label class="form-label">Language</label>
-          <select id="language" class="form-select" disabled>
-          </select>
+          <select id="language" class="form-select" disabled></select>
+          <div id="langNote" class="form-text text-info d-none">
+            Qwen model supports English only.
+          </div>
         </div>
 
         <div class="col-md-3">
